--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title      : online
 email      : martin@biteinvestments.com #this is also the email contact forms will go to
 description: "Site description"
 author     : Martin
-# logo:     #optional, defaults to site title
+logo       : assets\img\clients\creative-market.jpg
   # path: assets\img\clients\creative-market.jpg
   # height: 60 #height in px, defaults to 52px
 
